feature(cases-by-country-page): all the data is shown using NgTable, sorting and searching is implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 <div class="content" role="main">
 
-  <app-cases-by-country></app-cases-by-country>
+  <app-cases-by-country style="width: 100%;"></app-cases-by-country>
 
 </div>
 
