--- a/src/app/cases-by-country/cases-by-country.component.html
+++ b/src/app/cases-by-country/cases-by-country.component.html
@@ -1,1 +1,58 @@
-<p>cases-by-country works!</p>
+<!-- <table border="1" style="text-align:center;">
+  <thead>
+    <tr>
+      <th>Country</th>
+      <th>Confirmed</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let country of proccessedData">
+      <td>{{country[0]}}</td>
+      <td>{{country[1]}}</td>
+    </tr>
+  </tbody>
+</table> -->
+
+<div>
+  <mat-form-field appearance="standard">
+    <mat-label>Search</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Malaysia" #input>
+  </mat-form-field>
+
+  <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)"
+    class="mat-elevation-z8">
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="country">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name"> Country </th>
+      <td mat-cell *matCellDef="let element">{{element.country}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="confirmed">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by confirmed"> Confirmed Cases
+      </th>
+      <td mat-cell *matCellDef="let element"> {{element.confirmed}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="recovered">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by recovered"> Recovered
+      </th>
+      <td mat-cell *matCellDef="let element"> {{element.recovered}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="death">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by death"> Death
+      </th>
+      <td mat-cell *matCellDef="let element"> {{element.death}} </td>
+    </ng-container>
+
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    </tr>
+  </table>
+</div>
